cluster-configuration/apexalgo-iad/domain-check/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: domain-check
  labels:
    app.kubernetes.io/name: domain-check
    app.kubernetes.io/component: namespace
